fixed overflow issue on mobile with 3d canvas

--- a/book/assets/css/book-style.css
+++ b/book/assets/css/book-style.css
@@ -420,6 +420,7 @@ footer a:hover {
 	user-select: none;
 	position: relative;
 	padding-top: 100px;
+	overflow: hidden;
 }
 
 .heading-anchor,
